# embedded-projects

./: .gitignore  README.md
arduino_porte_garage/: arduino_porte_garage.ino
chip32/: chip32.cpp  chip32.h  chip32_assembler.cpp  chip32_assembler.h
home_assistant/: compose.yaml
script-engines/: CMakeLists.txt  main.cpp  test.bas  test.fs  test.lsp  test_cbor.cpp  test_cbor.h  test_json.cpp  test_lisp.lisp  test_lisp_1k.cpp  test_tcl_tcli.cpp  zfconf.h
script-engines/chip8/: chip8.c  chip8.h
script-engines/fe/src/: fe.h
script-engines/lisp-1k/src/: lisp.c
script-engines/lisp-interpreter/: ul.c
script-engines/tcli/include/: tcli.h  tclie.h
